fix overflow property of mainwindow

--- a/frontendclient/resources/css/mystyle.css
+++ b/frontendclient/resources/css/mystyle.css
@@ -143,6 +143,7 @@ body {
 .mainwindow {
   font-size: 1.2em;
   margin: 0 12px;
+  overflow: scroll;
 }
 
 .mainwindow a {
